# rekordbox-xml-collection-parser

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: README.md  collection_stats.py  filter_playlist_by_bpm_and_key.py  find_tracks_missing_cues.py
rekordbox_collection_reader/: __init__.py  helpers.py  models.py  parser.py
tests/: test_helpers.py  test_models.py  test_parser.py
tests/fixtures/: test_collection.xml
