[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rekordbox-collection-reader"
version = "0.1.0"
description = "Parse rekordbox XML exports into Python objects for analysis"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
